# silamoney

./: Cargo.toml  LICENSE  README.md
examples/: check_handle.rs
src/: lib.rs
src/endpoints/: mod.rs
src/endpoints/account/: link_account.rs  mod.rs
src/endpoints/entity/: check_kyc.rs  mod.rs  register.rs  request_kyc.rs
src/endpoints/entity/update/: address.rs  email.rs  identity.rs  mod.rs  phone.rs
src/endpoints/transaction/: cancel_transaction.rs  get_transactions.rs  issue_sila.rs  mod.rs  redeem_sila.rs  transfer_sila.rs
src/endpoints/wallet/: get_sila_balance.rs  mod.rs
