[package]
name = "silamoney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.22.1", features = ["recovery"]}
sha3 = "0.10.1"
hex = "0.4.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["default-tls", "gzip", "json"] }
env_logger = "0.9.0"
log = "0.4.11"