[package]
name = "silamoney"
description = "A rust library for interacting with the Sila Banking API (https://silamoney.com)"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["default-tls", "gzip", "json"] }
secp256k1 = { version = "0.22.1", features = ["recovery"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.1"
slice_as_array = "1.1.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
web3 = "0.18.0"